[package]
name = "force_field"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino2501@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"
hecs = "0.3.*"

[dependencies.sdl2]
version = "0.34.*"
default-features = false
#features = ["ttf","image","gfx","mixer"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[profile.dev]
opt-level = 1