[package]
name = "force_field"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino2501@gmail.com>"]
edition = "2018"
description = "Flow field and automaton simulation with SDL2 and hecs ECS."
repository = "https://github.com/kirinokirino/ForceField"
documentation = ""
homepage = ""
readme = "README.md"
license = "mit"
keywords = ["simulation"]
categories = ["simulation"]

[dependencies]
derive-new = "0.5.8"
hecs = "0.3.*"
simdnoise = "3.1.6"

[dependencies.sdl2]
version = "0.34.*"
default-features = false
features = ["gfx"]
#features = ["ttf","image","gfx","mixer"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[profile.dev]
opt-level = 1