[package]
name = "force_field"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino2501@gmail.com>"]
edition = "2018"
description = "Flow field and automaton simulation with SDL2 and hecs ECS."
repository = "https://github.com/kirinokirino/ForceField"
documentation = ""
homepage = ""
readme = "README.md"
license = "mit"
keywords = ["simulation"]
categories = ["simulation"]

[dependencies]
simdnoise = "3.1.6"

[dependencies.sdl2]
version = "0.34.*"
default-features = false
features = ["gfx"]
#features = ["ttf","image","gfx","mixer"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dev-dependencies]
criterion = "0.3"


[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
